<resources>
    <string name="app_name">My Books Library</string>

    <string name="banner_ad_unit_id_ac_search">ca-app-pub-1726472410230117/3292272040</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="search">Search Books</string>
    <string name="no_books_found">No Books Found!</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="saved_books">Saved Books</string>
    <string name="tools">Tools</string>
    <string name="share">Share</string>
    <string name="rate_s">Rate Us</string>
    <string name="save">Save</string>
    <string name="favorite_authors">Favorite Authors</string>
    <string name="Settings">Settings</string>
    <string name="favorite_topics">Favorite Topics</string>
    <string name="language">Language</string>
    <string name="night_mode">Night Mode</string>
    <string name="favorite">Favorites</string>
    <string name="home">Home</string>
    <string name="about">ABOUT</string>
    <string name="exit">Exit</string>
    <string name="Quit">Are you sure you want to exit?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="choose_language">Choose Language..</string>
    <string name="Rate_app">Rate App</string>
    <string name="enter_keyword">Enter a keyword...</string>
    <string name="read">Free Reading</string>
    <string name="save_only">Save</string>
    <string name="save_with_specific_author">Save with specific author</string>
    <string name="save_to_specific_topic">save to specific topic</string>
    <string name="delete">Delete</string>
    <string name="night_mode_on">On</string>
    <string name="night_mode_off">Off</string>
    <string name="choose_nightMode_state">Choose Night Mode State</string>
    <string name="night_modeOn">Night Mode is On</string>
    <string name="night_modeOff">Night Mode is Off</string>
    <string name="books_list">Books list</string>
    <string name="buy">Buy</string>
    <string name="preview">Preview</string>
    <string name="book_info">Book info</string>
    <string name="no_description_available">No description available</string>
    <string name="if_you">If you liked it, please rate it.</string>
    <string name="Delete_Author">Delete Author?</string>
    <string name="Delete_Author_msg">Are you sure you want delete this Author? \n as all books in it will be removed</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="deleted">Deleted</string>
    <string name="no_Saved_Books_Yet">No Saved Books Yet...</string>
    <string name="delete_book">Delete Book?</string>
    <string name="delete_book_msg">Are you sure you want delete this Book?</string>
    <string name="save_it_again">Save it again</string>
    <string name="successfully_saved">Successfully saved</string>
    <string name="type_author_name_again">Type author name again</string>
    <string name="successfully_added">Successfully added</string>
    <string name="add_author_name">add author\'s name..</string>
    <string name="add_topic">add topic..</string>
    <string name="type_topic_name_again">Type topic name again</string>
    <string name="delete_topic">Delete Topic?</string>
    <string name="delete_topic_msg">Are you sure you want delete this Topic? \n as all books in it will be removed</string>
    <string name="from_storage">From Storage</string>
    <string name="save_from_storage">Save from Storage</string>
    <string name="not_deleted">Error with deleting book</string>
    <string name="not_deleted_2">Error with deleting author</string>
    <string name="update">Update</string>
    <string name="editor_activity_title_new_author">Add Author</string>
    <string name="editor_activity_title_edit_author">Update Author</string>
    <string name="editor_update_author_failed">Error with updating author name</string>
    <string name="editor_update_author_successful">Author name updated</string>
    <string name="delete_all">Delete all</string>
    <string name="delete_all_books">Delete all Books?</string>
    <string name="delete_all_books_msg">Are you sure you want delete all Books?</string>
    <string name="deleted_all_books">Books deleted</string>
    <string name="not_deleted_all_books">Error with deleting books</string>
    <string name="editor_activity_title_new_topic">Add Topic</string>
    <string name="editor_activity_title_edit_topic">Update Topic</string>
    <string name="Delete_Topic">Delete Topic?</string>
    <string name="Delete_Topic_msg">Are you sure you want delete this Topic? \n as all books in it will be removed</string>
    <string name="not_deleted_3">Error with deleting topic</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="action_settings">Settings</string>


    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="download">Download</string>


</resources>
