<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/transparent"
    android:layout_gravity="center"
    android:gravity="center">

        <EditText
            android:id="@+id/add_auth_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_author_name"
            android:inputType="textCapWords"
            android:paddingLeft="8dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ok_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/ok" />

            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />
        </LinearLayout>
</LinearLayout>