<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/bookInfoBackground"
    tools:showIn="@layout/app_bar_home"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="4dp">

        <ImageView
            android:id="@+id/book_image_2"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher_round"
            android:layout_marginTop="32dp"/>

        <TextView
            android:id="@+id/book_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:padding="4dp"
            android:textColor="?attr/bookNameText"
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/author_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:padding="2dp"
            android:textColor="?attr/authorNameText"
            android:textAppearance="?android:textAppearanceMedium"/>

        <TextView
            android:id="@+id/published_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:padding="2dp"
            android:textColor="?attr/publishedDateanddesc"
            android:textAppearance="?android:textAppearanceMedium"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">
            <Button
                android:id="@+id/read_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/read"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp"
                android:background="@drawable/read_button"
                android:textAppearance="?android:textAppearanceSmall"/>

            <Button
                android:id="@+id/buy_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/buy"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp"
                android:background="@drawable/read_button"
                android:textAppearance="?android:textAppearanceSmall"/>

            <Button
                android:id="@+id/preview_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/preview"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp"
                android:background="@drawable/read_button"
                android:textAppearance="?android:textAppearanceSmall"/>
        </LinearLayout>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:layout_marginRight="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginBottom="4dp"
            android:textColor="?attr/publishedDateanddesc"
            android:textAppearance="?android:textAppearanceMedium"
            android:gravity="center"
            android:justificationMode="inter_word" />
    </LinearLayout>
</ScrollView>